Update .gitignore to properly exclude log files and temporary files
- Fix logs directory pattern (logs/ instead of .logs*/)
- Add temp_file_list.txt, debug.log, and failed_corposid to ignore list
- Ensure all log and temporary files are properly excluded from version control

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,6 @@ ENV/
 # 日志文件
 *.log
 logs/
-scripts/merge/failed_corposid
 
 # 数据文件
 *.gz
@@ -41,3 +40,7 @@ Thumbs.db
 .coverage
 htmlcov/
 
+# 临时文件和日志
+temp_file_list.txt
+debug.log
+failed_corposid
